# hackathon-ufpr-itape

./: .dockerignore  .env  .gitattributes  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  setup_swap.sh
data/: DIM_CURSOS.csv  DIM_DISCIPLINAS.csv  DIM_PERGUNTAS.csv  DIM_TIPO_PERGUNTA_SINAES.csv  DIM_UNIDADES.csv  DadosAvDisciplinasEAD_1S2025.xlsx  FATO_AVCURSOS.csv  FATO_AVINSTITUCIONAL.csv  Visualização dos resultados da Avaliação Institucional da UFPR.md
data_original/: DadosAvInstitucional_2025.xlsx
src/: main.py
src/components/: chat.py  dashboard.py
src/services/: data_tools.py  rag_engine.py  table_metadata.py
src/utils/: encrypt_key.py  generate_index.py  key_manager.py  models.py
storage/: default__vector_store.json  docstore.json  index_store.json
tests/: test_auto_join.py  test_llm.py  test_rag_system.py
