[project]
name = "dados-ufpr-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "llama-index",
    "llama-index-llms-gemini",
    "llama-index-embeddings-gemini",
    "google-generativeai",
    "pandas",
    "openpyxl",
    "python-dotenv"
]
